--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,14 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>demo</artifactId>
+	<artifactId>ping-pong-proxy</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>demo</name>
-	<description>Demo project for Spring Boot</description>
+	<name>ping-pong-proxy</name>
+	<description>ping-pong-proxy project for Spring Boot</description>
 
 	<properties>
 		<java.version>1.8</java.version>
+		<logback.version>1.2.3</logback.version>
 		<scala.version>2.12.7</scala.version>
 		<akka.version>2.5.19</akka.version>				
 	</properties>
@@ -39,7 +40,7 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.2.3</version>
+            <version>${logback.version}</version>
         </dependency>
 	</dependencies>
 
