--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<java.version>1.8</java.version>
 		<logback.version>1.2.3</logback.version>
 		<scala.version>2.12.7</scala.version>
+		<scala.compat.version>2.12</scala.compat.version>
 		<akka.version>2.5.19</akka.version>				
 	</properties>
 
@@ -29,12 +30,12 @@
 		</dependency>
 		<dependency>
 			<groupId>com.typesafe.akka</groupId>
-			<artifactId>akka-actor_2.12</artifactId>
+			<artifactId>akka-actor_${scala.compat.version}</artifactId>
 			<version>${akka.version}</version>
 		</dependency>
         <dependency>
             <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-slf4j_2.12</artifactId>
+            <artifactId>akka-slf4j_${scala.compat.version}</artifactId>
             <version>${akka.version}</version>
         </dependency>
         <dependency>
